# protogasm-unit

./: .gitignore  .gitmodules  .main.cpp.swp  .test.cpp.swp  a.out  avr  bad  build  build.sh  go  good  main.cpp  main.d  test.cpp  test.d
src/: CMakeLists.txt  Mockmain.c  Mockmain.cpp  avr  main.cpp  main.h  struct.c  test.cpp
src/FastLED/: cscope.out
src/mocks/: Mockmain.c  Mockmain.h
